Bug 1654286 - Convert private fields option to a JSContext option r=jandem

This avoids the issue where xpcshell appears to startup, create a realm, then
read preferences. Prior to this patch, by the time the prefs were read, it was
too late for the realm creation option to take effect. This way, we update the
realm option.

Differential Revision: https://phabricator.services.mozilla.com/D84426