js/public/RealmOptions.h
@@ -244,12 +244,6 @@ class JS_PUBLIC_API RealmCreationOptions {
     return *this;
   }
 
-  bool getPrivateClassFieldsEnabled() const { return privateClassFields_; }
-  RealmCreationOptions& setPrivateClassFieldsEnabled(bool flag) {
-    privateClassFields_ = flag;
-    return *this;
-  }
-
   // This flag doesn't affect JS engine behavior.  It is used by Gecko to
   // mark whether content windows and workers are "Secure Context"s. See
   // https://w3c.github.io/webappsec-secure-contexts/
@@ -290,7 +284,6 @@ class JS_PUBLIC_API RealmCreationOptions {
   bool toSource_ = false;
   bool propertyErrorMessageFix_ = false;
   bool iteratorHelpers_ = false;
-  bool privateClassFields_ = false;
   bool secureContext_ = false;
 };
 
